implementa mapeamento das classes com EF e FluentApi

--- a/PortalAnuncios/appsettings.json
+++ b/PortalAnuncios/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PortalAnunciosContext": "Server=(localdb)\\mssqllocaldb;Database=PortalAnuncios.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PortalAnunciosContext": "Server=(localdb)\\mssqllocaldb;Database=PortalAnuncios2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
